--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,15 @@
 
 # Temporary files
 *.000
-#*.bak
-#*.bck
-#*.kicad_pcb-bak
-#*.sch-bak
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.sch-bak
 *~
 _autosave-*
 *.tmp
-#*-save.pro
-#*-save.kicad_pcb
+*-save.pro
+*-save.kicad_pcb
 fp-info-cache
 
 # Netlist files (exported from Eeschema)
